Add new file border.html

--- a/border.html
+++ b/border.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>TYPES OF BORDERS</title>
-    <link rel="stylesheet" href="./project2 border.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>BORDERS</h1>
